--- a/views/home.html
+++ b/views/home.html
@@ -76,11 +76,11 @@
             </div>
         </div>
         <div class="search-container">
-            <div class="searchInput">
+            <div id="searchInput">
                 <button id="btn" type="submit">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="#fff" xmlns="http://www.w3.org/2000/svg" class="search-icon"><path fill-rule="evenodd" clip-rule="evenodd" d="M13 11C13 13.7614 10.7614 16 8 16C5.23858 16 3 13.7614 3 11C3 8.23858 5.23858 6 8 6C10.7614 6 13 8.23858 13 11ZM14.0425 16.2431C12.5758 17.932 10.4126 19 8 19C3.58172 19 0 15.4183 0 11C0 6.58172 3.58172 3 8 3C12.4183 3 16 6.58172 16 11C16 11.9287 15.8417 12.8205 15.5507 13.6497L24.2533 18.7028L22.7468 21.2972L14.0425 16.2431Z" fill="#fff"></path></svg>
                 </button>
-                <input id="search" type="text" name="buscar" list="peliculas" placeholder="Títulos, personas, géneros">
+                <input id="search" type="text" list="peliculas" placeholder="Títulos, personas, géneros">
             </div>
             <datalist id="peliculas">
                 <option value="GoodFellas">
@@ -101,24 +101,14 @@
             </datalist>
         </div>
     </nav>
-    <div class="popular">
-        <div id="container"></div>
-        <h1>Populares en Netflix</h1>
-        <div class="popular-movies">
-            <div class="slider responsive shadow">
-                <div class="card"><img src="../img/goodfellas.jpg"></div>
-                <div class="card"><img src="../img/inglourious-basterds.jpg"></div>
-                <div class="card"><img src="../img/kill-bill1.jpg"></div>
-                <div class="card"><img src="../img/kill-bill2.jpg"></div>
-                <div class="card"><img src="../img/pulp-fiction.jpg"></div>
-                <div class="card"><img src="../img/the-irishman.jpg"></div>
-                <div class="card"><img src="../img/the-wolf-of-wall-street.jpg"></h3></div>
-                <div class="card"><img src="../img/once-upon-a-time.jpg"></div>
-                <div class="card"><img src="../img/taxi-driver.jpg"></div>
-            </div>
+    <div id="generalContainer" class="container">
+        <div id="containerSearch"></div>
+    </div>
+    <div id="bgInfo">
+        <div id="movieInfo">
         </div>
     </div>
-
+    
     <!-- Slick Slider -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js'></script>
